force-app/main/default/objects/sf_devops__Change_Submission__c/fields/sf_devops__Comment__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Comment__c</fullName>
    <description>Allows for a comment to be associated with this submission</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>