force-app/main/default/objects/sf_devops__Change_Submission__c/fields/sf_devops__Prior_Remote_Reference__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Prior_Remote_Reference__c</fullName>
    <description>The remote reference immediatly prior to this one on the branch.  This is in VCS specific format.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Remote Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>